--- a/paginas/cadastrarUsuarios.html
+++ b/paginas/cadastrarUsuarios.html
@@ -10,10 +10,10 @@
 
 </head>
 <body>
-    <div class="container">
+    <div class="container col-4">
         <form action='/cadastrarUsuarios' method='GET'  class="row g-3">
             <fieldset class="border p-3" >
-                <legend class="mb-3">Cadastro de Usuários</legend>
+                <legend style="color:blue;" class="mb-3">Cadastro de Usuários</legend>
             <div class="col-md-4">
               <label for="nome" class="form-label">Nome</label>
               <input type="text" class="form-control" id="nome" name="nome" value="" required>
