--- a/paginas/cadastrarUsuarios.html
+++ b/paginas/cadastrarUsuarios.html
@@ -9,57 +9,66 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
-<body>
-    <div class="container col-5" style="color:white; background-color: black; margin-top: 50px; margin-bottom: 20px; border-radius: 20px;" >
+<body style="background-color: black;">
+    <div class="container col-5" id="form" style=" margin-top: 50px; margin-bottom: 20px; border-radius: 20px; color: rgb(0, 113, 0);" >
+      <img src="abpa.png" alt="Logotipo da ONG abpa" class="container col-40">
         <form action='/cadastrarUsuarios' method='GET'  class="row g-3">
-            <fieldset class="border p-3" >
-                <legend class="mb-3" style="text-align: center; font-size: 30px;">Cadastro de Usuários</legend>
+            <fieldset class="border p-3" style="background-color: rgb(255, 251, 251); border-radius: 20px; box-shadow: 10px 10px 10px rgb(48, 48, 48);" >
+                <legend class="mb-3" style="text-align: center; font-size: 45px; font-family:Georgia, 'Times New Roman', Times, serif;color: green">Cadastro de Usuários</legend>
             <div class="col-md-4">
               <label for="nome" class="form-label">Nome</label>
-              <input type="text" class="form-control" id="nome" name="nome" value="" required size="500" placeholder="Digite seu primeiro nome">
+              <input type="text" class="form-control" id="nome" name="nome" value="" required size="500" placeholder="Digite seu primeiro nome" style="border: 3px solid rgb(1, 119, 1);">
               <div class="invalid-feedback">Insira seu nome</div>
             </div>
+            <br>
             <div class="col-md-4">
               <label for="sobrenome" class="form-label">Sobrenome</label>
-              <input type="text" class="form-control" id="sobrenome" name="sobrenome" value="" required placeholder="Digite seu último nome">
+              <input type="text" class="form-control" id="sobrenome" name="sobrenome" value="" required placeholder="Digite seu último nome" style="border: 3px solid rgb(1, 119, 1);">
               <div class="invalid-feedback">Insira seu sobrenome</div>
             </div>
+            <br>
             <div class="col-md-4">
               <label for="nomeusuario" class="form-label">Nome do Usuário</label>
               <div class="input-group">
                 <span class="input-group-text" id="inputGroupPrepend2">@</span>
-                <input type="text" class="form-control" id="nomeusuario" name="nomeusuario"  aria-describedby="inputGroupPrepend2" required placeholder="Digite o nome de usuário">
+                <input type="text" class="form-control" id="nomeusuario" name="nomeusuario"  aria-describedby="inputGroupPrepend2" required placeholder="Digite o nome de usuário" style="border: 3px solid rgb(1, 119, 1);">
               </div>
               <div class="invalid-feedback">Insira Nome do Usuário</div>
             </div>
+            <br>
             <div class="col-md-4">
               <label for="senha" class="form-label">Senha</label>
-              <input type="password" class="form-control" id="senha" name="senha" value="" required>
+              <input type="password" class="form-control" id="senha" name="senha" value="" required style="border: 3px solid rgb(1, 119, 1);" placeholder="**********">
               <div class="invalid-feedback">Insira uma senha válida</div>
             </div>
+            <br>
             <div class="col-md-4">
               <label for="telefone" class="form-label">Telefone de Contato</label>
-              <input type="tel" class="form-control" id="telefone" name="telefone" pattern="\(\d{2}\)\s\d{5}-\d{4}" title="1899999-9999" placeholder="(18) 99999-9999" required>
+              <input type="tel" class="form-control" id="telefone" name="telefone" pattern="\(\d{2}\)\s\d{5}-\d{4}" title="1899999-9999" placeholder="(18) 99999-9999" required style="border: 3px solid rgb(1, 119, 1);">
               <div class="invalid-feedback">Insira um telefone de contato</div>
             </div>
+            <br>
             <div class="col-md-6">
               <label for="endereço" class="form-label">Endereço</label>
-              <input type="text" class="form-control" id="endereço" name="endereço" required placeholder="Digite o endereço">
+              <input type="text" class="form-control" id="endereço" name="endereço" required placeholder="Digite o endereço" style="border: 3px solid rgb(1, 119, 1);">
               <div class="invalid-feedback">Insira seu endereço</div>
             </div>
+            <br>
             <div class="col-md-6">
               <label for="endereço" class="form-label">Bairro</label>
-              <input type="text" class="form-control" id="endereço" name="endereço" required placeholder="Digite o bairro">
+              <input type="text" class="form-control" id="endereço" name="endereço" required placeholder="Digite o bairro" style="border: 3px solid rgb(1, 119, 1);">
               <div class="invalid-feedback">Insira seu bairro</div>
             </div>
+            <br>
             <div class="col-md-6">
               <label for="cidade" class="form-label">Cidade</label>
-              <input type="text" class="form-control" id="cidade" name="cidade" required placeholder="Digite a cidade">
+              <input type="text" class="form-control" id="cidade" name="cidade" required placeholder="Digite a cidade" style="border: 3px solid rgb(1, 119, 1);">
               <div class="invalid-feedback">Insira sua cidade</div>
             </div>
+            <br>
             <div class="col-md-3">
               <label for="estado" class="form-label">Estado</label>
-              <select class="form-select" id="estado" required>
+              <select class="form-select" id="estado" required style="border: 3px solid rgb(1, 119, 1);">
                 <option selected disabled value="" id="estado" name="estado">Selecionar</option>
                 <option value="AC">Acre</option>
                 <option value="AL">Alagoas</option>
@@ -91,9 +100,10 @@
                 <option value="EX">Estrangeiro</option></option>
               </select>
             </div>
+            <br>
             <div class="col-md-3">
               <label for="cep" class="form-label">CEP</label>
-              <input type="text" class="form-control" id="cep" name="cep" required placeholder="99999-999">
+              <input type="text" class="form-control" id="cep" name="cep" required placeholder="99999-999" style="border: 3px solid rgb(1, 119, 1);">
               <div class="invalid-feedback">Insira seu CEP</div>
             </div>
             <br/>
@@ -106,11 +116,13 @@
             <br/>
             <div class="form-group">
               <label for="informacoes">Informações Adicionais:</label>
-              <textarea class="form-control" id="informacoes" rows="3" placeholder="Digite aqui..."></textarea>
+              <textarea class="form-control" id="informacoes" rows="3" placeholder="Digite aqui..." style="border: 3px solid rgb(1, 119, 1);"></textarea>
             </div>
             <br/>
             <div class="col-12">
-              <button class="btn btn-primary" type="submit" style="border: 2px solid black; align-items: center;">Cadastrar</button>
+              <center>
+              <button class="btn btn-primary" type="submit" style="border: 2px solid black; font-size: 20px; background-color: rgb(74, 167, 74); width: 350px; text-align: center; padding: 10px 15px;">Cadastrar</button>
+              </center>
             </div>
         </fieldset>
           </form>
